[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-graffiti"
version = "0.1.0"
description = "Render text into a local-only GitHub-style contribution grid art project."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Junklab" }
]
keywords = ["git", "github", "contribution-grid", "creative-coding", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Artistic Software",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
grid-graffiti = "grid_graffiti:main"

[tool.setuptools]
py-modules = ["grid_graffiti"]
